--- a/index.html
+++ b/index.html
@@ -71,15 +71,15 @@
 <table style="width: 100%;"> 
    <tr>
       <td style="text-align:center;color:white;width:20%;"><a></a></td> 
-      <td style="text-align:center;width:60%;"><a style="color: #ededed;font-style: italic;font-size:16px;">aktualizacja: 12.09.2022</a></td>
-      <td style="text-align:right;width:20%;"><a href="https://mojabiblia-github-io.translate.goog/?_x_tr_sl=pl&_x_tr_tl=en&_x_tr_hl=pl" style="font-size:14px;text-decoration: none;color:#6495ED">english</a></td>
+      <td style="text-align:center;width:60%;"><a style="color: #ededed;font-style: italic;font-size:15px;">aktualizacja: 12.09.2022</a></td>
+      <td style="text-align:right;width:20%;"><a href="https://mojabiblia-github-io.translate.goog/?_x_tr_sl=pl&_x_tr_tl=en&_x_tr_hl=pl" style="font-size:15px;text-decoration: none;color:#6495ED">english</a></td>
    </tr> 
 </table>
 
 </br>
 </br>
 
-<div style="clear:left;font-size:14px;text-align: justify;">
+<div style="clear:left;font-size:15px;text-align: justify;">
 
 Niniejsza strona zawiera tekst Biblii oraz kopie stron z materiałami pomocnymi w jej nietrynitarnej interpretacji 
 (wiara w Jedynego Boga JHWH i Jego Syna Jezusa Chrystusa). 
@@ -135,7 +135,8 @@ Kopiując te zasoby traktuję to
 z wielką odpowiedzialnością i powagą, ponieważ temat ten dotyka zarówno poznania naszego Stwórcy i Jego Słowa jak i życia poszczególnych ludzi. 
   
 Liczę, że Bóg pobłażliwie odniesie się do moich ewentualnych nieświadomych błędów w tym temacie. 
-Żywię nadzieję, że przyczynię się tym do zbliżania ludzi do Niego, a nie przeciwnie.</br></br>
+Żywię nadzieję, że przyczynię się tym do zbliżania ludzi do Niego, a nie przeciwnie. Niech to będzie mała cegiełka i wkład w wysiłek również 
+innych tysięcy ludzi, którzy dzięki Internetowi mogą nieść Ewangelię po całej Ziemi i pomagać w badaniu Słowa bożego. </br></br>
 
 Strona jest przeznaczona zarówno dla niewierzących w Jezusa - jako możliwość poznania przez nich uzasadnienia naszej Nadziei co do życia wiecznego 
 oraz jako możliwość przyjęcia Ewangelii o darmowym zbawieniu z łaski, 
