--- a/index.html
+++ b/index.html
@@ -119,9 +119,13 @@ przez niemal całe nominalne chrześcijaństwo to np.:
 </br></br>
 Nie tylko wiele wspólnot tkwi w tego typu błędach, ale również wielu nauczycieli internetowych je powiela - bezrefleksyjnie lub celowo. 
 
-Niniejsza strona w jakimś stopniu adresuje ten problem i daje biblijne wyjaśnienie wielu spornych spraw. 
-
-Materiały te mogą być pomocą we wzroście duchowym, ale 
+Niniejsza strona w jakimś stopniu adresuje ten problem i daje biblijne wyjaśnienie wielu spornych spraw. Co do tzw. "Trójcy" to nie jest zresztą 
+istotne co jakiekolwiek współczesny człowiek, łącznie z autorami ww. stron, objawia w kwestii tego jaki Bóg jest, ponieważ Bóg jest taki jaki jest 
+i żadna nasza ludzka opinia tego nie zmieni. Jest natomiast istotne co Bóg w Biblii objawia o sobie, a czego nie objawia. Jeśli okaże się 
+w wieczności, że Bóg faktycznie pokaże nam, że jest w trzech równych sobie osobach - z których każda osoba jest Bogiem - to nie będzie to 
+podlegać dyskusji. Problem w tym, że takiego objawienia jak narazie w Biblii nie znajdujemy.  
+  
+Materiały tutaj zebrane mogą być pomocą we wzroście duchowym, ale 
 muszą być traktowane jedynie jako komentarz do Pisma Świętego, 
 które to Pismo jest jedynym spisanym autorytetem i wyjaśnia samo siebie, 
 jeśli tylko jego czytanie jest połączone z wiarą w Jezusa. 
@@ -131,12 +135,14 @@ nie uważam się za proroka, ani za osobę mającą monopol na prawdę. Prawda j
 ja swoją wiarę (podobnie jak Autorzy ww. stron) i życie buduję na Słowie Bożym i prowadzeniu przez ducha świętego. 
 Jeżeli ktoś wskaże mi na podstawie Biblii, że się w czymś mylę to zmienię swój pogląd i będę wdzięczny za wykazanie go. 
   
-Kopiując te zasoby traktuję to 
-z wielką odpowiedzialnością i powagą, ponieważ temat ten dotyka zarówno poznania naszego Stwórcy i Jego Słowa jak i życia poszczególnych ludzi. 
+Kopiując te zasoby traktuję to z powagą i dużą odpowiedzialnością, ponieważ temat ten dotyka zarówno poznania naszego 
+Stwórcy i Jego Słowa jak i życia poszczególnych ludzi. 
   
 Liczę, że Bóg pobłażliwie odniesie się do moich ewentualnych nieświadomych błędów w tym temacie. 
-Żywię nadzieję, że przyczynię się tym do zbliżania ludzi do Niego, a nie przeciwnie. Niech to będzie mała cegiełka i wkład w wysiłek również 
-innych tysięcy ludzi, którzy dzięki Internetowi mogą nieść Ewangelię po całej Ziemi i pomagać w badaniu Słowa bożego. </br></br>
+Żywię nadzieję, że przyczynię się tym do zbliżania ludzi do Niego, a nie przeciwnie. Ponieważ ilość informacji jest duża i często odbiega od 
+powszechnego rozumienia to dla własnego dobra zalecam spokojne zaproznawanie się z materiałem aby dać sobie czas i nie wyrządzić sobie szkody. 
+Niech to będzie mała cegiełka, wkład w wysiłek innych tysięcy ludzi, którzy dzięki Internetowi mogą nieść Ewangelię po całej Ziemi 
+i pomagać w badaniu Słowa bożego. </br></br>
 
 Strona jest przeznaczona zarówno dla niewierzących w Jezusa - jako możliwość poznania przez nich uzasadnienia naszej Nadziei co do życia wiecznego 
 oraz jako możliwość przyjęcia Ewangelii o darmowym zbawieniu z łaski, 
@@ -144,7 +150,7 @@ oraz jako możliwość przyjęcia Ewangelii o darmowym zbawieniu z łaski,
 jak również dla wierzących - celem ich zbudowania. Niniejsze materiały nie rozstrzygają definitywnie 
 poruszanych spraw, ponadto przedstawiono jedynie mały wycinek tego co można z Biblii zrozumieć. 
  
-Każdy z nas ma nieco inne rozumienie i nie każda sprawa jest rozważana przez każdego człowieka na danym etapie jego życia. 
+Każdy z nas ma nieco inne rozumienie i nie każda sprawa jest rozważana przez każdego na danym etapie jego życia. 
 
 Zalecam jednak spojrzenie nie z punktu widzenia autorytetu jakiejkolwiek ludzkiej hierarchii w której się tkwi 
 lub tradycyjnych poglądów ludzkich, ale z punktu widzenia czysto biblijnego.
@@ -153,9 +159,9 @@ Jestem świadomy własnej niedoskonałości jak również możliwych błędów i
 
 Jeżeli czytelnik jest przekonany co do swojej wiary i poznania, a argumenty przytoczone nie przekonują Go - to absolutnie nie wykluczam, 
 
-że może mieć rację w danej sprawie. Zachęcam również wówczas do kontaktu mailowego i wymiany poglądów. 
+że może mieć rację w danej sprawie! Zachęcam również wówczas do kontaktu mailowego i wymiany poglądów. 
   
-Materiał tutaj spisany jest opisem doświadczeń Starszych, dokonanym w dobrej wierze i ze szczerością. 
+Jest tutaj jednak przedstawione świadectwo nie jednej, a wielu osób - doświadczeń Starszych, dokonanym w dobrej wierze i ze szczerością. 
   
 Wiara w Jezusa, a następnie życie wg ducha, prowadzenie przez niego i owoce wiary są najbardziej istotne, 
 jednak o samych Pismach również trzeba i warto rozmawiać - w miłości bo "poznanie nadyma, ale miłość buduje". 
@@ -163,7 +169,7 @@ jednak o samych Pismach również trzeba i warto rozmawiać - w miłości bo "po
 To Bóg objawia poszczególnym ludziom co chce - każdemu wg miary, podobnie jak każdy członek w ciele pełni inne funkcje. 
 
 Zachęcam do zachowania miłości i jedności między ludźmi oddanymi Chrystusowi,   
-o co On sam zresztą się modlił, mimo pewnych różnic w rozumieniu niektórych spraw. 
+o co On sam zresztą się modlił, mimo pewnych różnic w rozumieniu pomniejszych spraw. 
   
 Wszyscy korzystamy z materiałów ludzi 
 z którymi nie zgadzamy się w pełni, a są wartościowe. 
