--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@ Niniejsza strona w jakimś stopniu adresuje ten problem i daje biblijne wyjaśni
 istotne co jakiekolwiek współczesny człowiek, łącznie z autorami ww. stron, objawia w kwestii tego jaki Bóg jest, ponieważ Bóg jest taki jaki jest 
 i żadna nasza ludzka opinia tego nie zmieni. Jest natomiast istotne co Bóg w Biblii objawia o sobie, a czego nie objawia. Jeśli okaże się 
 w wieczności, że Bóg faktycznie pokaże nam, że jest w trzech równych sobie osobach - z których każda osoba jest Bogiem - to nie będzie to 
-podlegać dyskusji. Problem w tym, że takiego objawienia jak narazie w Biblii nie znajdujemy.  
+podlegać dyskusji. Problem w tym, że takiego objawienia jak narazie w Biblii nie znajdujemy, jeśli wyłączymy ludzką jedynie tradycję 
+powielaną przez wieki.  
   
 Materiały tutaj zebrane mogą być pomocą we wzroście duchowym, ale 
 muszą być traktowane jedynie jako komentarz do Pisma Świętego, 
@@ -140,7 +141,7 @@ Stwórcy i Jego Słowa jak i życia poszczególnych ludzi.
   
 Liczę, że Bóg pobłażliwie odniesie się do moich ewentualnych nieświadomych błędów w tym temacie. 
 Żywię nadzieję, że przyczynię się tym do zbliżania ludzi do Niego, a nie przeciwnie. Ponieważ ilość informacji jest duża i często odbiega od 
-powszechnego rozumienia to dla własnego dobra zalecam spokojne zaproznawanie się z materiałem aby dać sobie czas i nie wyrządzić sobie szkody. 
+powszechnego rozumienia to dla własnego dobra zalecam spokojne zapoznawanie się z materiałem aby dać sobie czas i nie wyrządzić sobie szkody. 
 Niech to będzie mała cegiełka, wkład w wysiłek innych tysięcy ludzi, którzy dzięki Internetowi mogą nieść Ewangelię po całej Ziemi 
 i pomagać w badaniu Słowa bożego. </br></br>
 
