--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <table style='display:table; width: 100%;cursor: pointer; cursor: hand;'>
     <tr> <td class="row1"> thaleia.pl <i>(kopia)</i></td> </tr>
     <tr> <td class="row2"> </td></tr>
-    <tr> <td class="row3"> Strona obalająca tzw. trójcę </td></tr>
+    <tr> <td class="row3"> Strona obalająca tzw. Trójcę </td></tr>
   </table>
 </div> 
 </a>
@@ -86,7 +86,7 @@ Niniejsza strona zawiera tekst Biblii oraz kopie stron z materiałami pomocnymi 
 
 Argumenty tu przedstawione (poza ogólną nauką Pisma Świętego, proroctwami, historią, ...) 
 odrzucają niebiblijną koncepcję Trójcy / Trójjedynego boga (przedstawianego przez jej wyznawców jako 
-trzech osób: Ojca, Syna i Ducha świętego tworzących rzekomo razem jednego boga) 
+trzech równych sobie osób: Ojca, Syna i Ducha świętego tworzących rzekomo razem jednego boga) 
 prezentowaną przez większość denominacji protestanckich, prawosławie i katolicyzm. 
 
 W opinii autora Biblia przedstawia Boga Ojca (JHWH) i Jego Syna, jako dwie odrębne osoby i dwie odrębne istoty. 
@@ -119,8 +119,8 @@ przez niemal całe nominalne chrześcijaństwo to np.:
 </br></br>
 Nie tylko wiele wspólnot tkwi w tego typu błędach, ale również wielu nauczycieli internetowych je powiela - bezrefleksyjnie lub celowo. 
 
-Niniejsza strona w jakimś stopniu adresuje ten problem i daje biblijne wyjaśnienie wielu spornych spraw. Co do tzw. "Trójcy" to nie jest zresztą 
-istotne co jakiekolwiek współczesny człowiek, łącznie z autorami ww. stron, objawia w kwestii tego jaki Bóg jest, ponieważ Bóg jest taki jaki jest 
+Niniejsza strona w jakimś stopniu adresuje ten problem i daje biblijne wyjaśnienie wielu spornych spraw. Co do tzw. "Trójcy" to nie jest 
+istotne co jakiekolwiek współczesny człowiek, łącznie z Autorami ww. stron, objawia w kwestii tego jaki Bóg jest, ponieważ Bóg jest taki jaki jest 
 i żadna nasza ludzka opinia tego nie zmieni. Jest natomiast istotne co Bóg w Biblii objawia o sobie, a czego nie objawia. Jeśli okaże się 
 w wieczności, że Bóg faktycznie pokaże nam, że jest w trzech równych sobie osobach - z których każda osoba jest Bogiem - to nie będzie to 
 podlegać dyskusji. Problem w tym, że takiego objawienia jak narazie w Biblii nie znajdujemy, jeśli wyłączymy ludzką jedynie tradycję 
@@ -133,17 +133,14 @@ jeśli tylko jego czytanie jest połączone z wiarą w Jezusa.
 
 Jako osoba, która skopiowała te materiały, 
 nie uważam się za proroka, ani za osobę mającą monopol na prawdę. Prawda jest w Chrystusie i Chrystus jest Prawdą, 
-ja swoją wiarę (podobnie jak Autorzy ww. stron) i życie buduję na Słowie Bożym i prowadzeniu przez ducha świętego. 
+ja swoją wiarę (podobnie jak Autorzy ww. stron) i życie buduję na Słowie Bożym i prowadzeniu przez Boga.  
 Jeżeli ktoś wskaże mi na podstawie Biblii, że się w czymś mylę to zmienię swój pogląd i będę wdzięczny za wykazanie go. 
   
 Kopiując te zasoby traktuję to z powagą i dużą odpowiedzialnością, ponieważ temat ten dotyka zarówno poznania naszego 
 Stwórcy i Jego Słowa jak i życia poszczególnych ludzi. 
   
 Liczę, że Bóg pobłażliwie odniesie się do moich ewentualnych nieświadomych błędów w tym temacie. 
-Żywię nadzieję, że przyczynię się tym do zbliżania ludzi do Niego, a nie przeciwnie. Ponieważ ilość informacji jest duża i często odbiega od 
-powszechnego rozumienia to dla własnego dobra zalecam spokojne zapoznawanie się z materiałem aby dać sobie czas i nie wyrządzić sobie szkody. 
-Niech to będzie mała cegiełka, wkład w wysiłek innych tysięcy ludzi, którzy dzięki Internetowi mogą nieść Ewangelię po całej Ziemi 
-i pomagać w badaniu Słowa bożego. </br></br>
+Żywię nadzieję, że przyczynię się tym do zbliżania ludzi do Niego, a nie przeciwnie. </br></br>
 
 Strona jest przeznaczona zarówno dla niewierzących w Jezusa - jako możliwość poznania przez nich uzasadnienia naszej Nadziei co do życia wiecznego 
 oraz jako możliwość przyjęcia Ewangelii o darmowym zbawieniu z łaski, 
@@ -153,7 +150,7 @@ poruszanych spraw, ponadto przedstawiono jedynie mały wycinek tego co można z 
  
 Każdy z nas ma nieco inne rozumienie i nie każda sprawa jest rozważana przez każdego na danym etapie jego życia. 
 
-Zalecam jednak spojrzenie nie z punktu widzenia autorytetu jakiejkolwiek ludzkiej hierarchii w której się tkwi 
+Zalecam spojrzenie nie z punktu widzenia autorytetu jakiejkolwiek ludzkiej hierarchii w której się tkwi 
 lub tradycyjnych poglądów ludzkich, ale z punktu widzenia czysto biblijnego.
 
 Jestem świadomy własnej niedoskonałości jak również możliwych błędów interpretacji Autorów cytowanych stron. 
