--- a/index.html
+++ b/index.html
@@ -81,8 +81,7 @@
 
 <div style="clear:left;font-size:15px;text-align: justify;">
 
-Niniejsza strona zawiera tekst Biblii oraz kopie stron z materiałami pomocnymi w jej nietrynitarnej interpretacji 
-(wiara w Jedynego Boga JHWH i Jego Syna Jezusa Chrystusa). 
+Niniejsza strona zawiera tekst Biblii oraz kopie stron z materiałami pomocnymi w jej nietrynitarnej interpretacji. 
 
 Argumenty tu przedstawione (poza ogólną nauką Pisma Świętego, proroctwami, historią, ...) 
 odrzucają niebiblijną koncepcję Trójcy / Trójjedynego boga (przedstawianego przez jej wyznawców jako 
@@ -120,16 +119,16 @@ przez niemal całe nominalne chrześcijaństwo to np.:
 Nie tylko wiele wspólnot tkwi w tego typu błędach, ale również wielu nauczycieli internetowych je powiela - bezrefleksyjnie lub celowo. 
 
 Niniejsza strona w jakimś stopniu adresuje ten problem i daje biblijne wyjaśnienie wielu spornych spraw. Co do tzw. "Trójcy" to nie jest 
-istotne co jakiekolwiek współczesny człowiek, łącznie z Autorami ww. stron, objawia w kwestii tego jaki Bóg jest, ponieważ Bóg jest taki jaki jest 
+istotne co jakikolwiek współczesny człowiek, łącznie z Autorami ww. stron, objawia w kwestii tego jaki Bóg jest, ponieważ Bóg jest taki jaki jest 
 i żadna nasza ludzka opinia tego nie zmieni. Jest natomiast istotne co Bóg w Biblii objawia o sobie, a czego nie objawia. Jeśli okaże się 
-w wieczności, że Bóg faktycznie pokaże nam, że jest w trzech równych sobie osobach - z których każda osoba jest Bogiem - to nie będzie to 
+w wieczności, że Bóg faktycznie pokaże nam że jest w trzech równych sobie osobach - z których każda osoba jest Bogiem - to nie będzie to 
 podlegać dyskusji. Problem w tym, że takiego objawienia jak narazie w Biblii nie znajdujemy, jeśli wyłączymy ludzką jedynie tradycję 
 powielaną przez wieki.  
   
 Materiały tutaj zebrane mogą być pomocą we wzroście duchowym, ale 
 muszą być traktowane jedynie jako komentarz do Pisma Świętego, 
 które to Pismo jest jedynym spisanym autorytetem i wyjaśnia samo siebie, 
-jeśli tylko jego czytanie jest połączone z wiarą w Jezusa. 
+jeśli tylko jego czytanie jest połączone z wiarą w Jezusa.    
 
 Jako osoba, która skopiowała te materiały, 
 nie uważam się za proroka, ani za osobę mającą monopol na prawdę. Prawda jest w Chrystusie i Chrystus jest Prawdą, 
@@ -156,26 +155,22 @@ lub tradycyjnych poglądów ludzkich, ale z punktu widzenia czysto biblijnego.
 Jestem świadomy własnej niedoskonałości jak również możliwych błędów interpretacji Autorów cytowanych stron. 
 
 Jeżeli czytelnik jest przekonany co do swojej wiary i poznania, a argumenty przytoczone nie przekonują Go - to absolutnie nie wykluczam, 
-
-że może mieć rację w danej sprawie! Zachęcam również wówczas do kontaktu mailowego i wymiany poglądów. 
+że może mieć rację w danej sprawie! Zachęcam wówczas do kontaktu mailowego i wymiany poglądów. 
   
 Jest tutaj jednak przedstawione świadectwo nie jednej, a wielu osób - doświadczeń Starszych, dokonanym w dobrej wierze i ze szczerością. 
   
-Wiara w Jezusa, a następnie życie wg ducha, prowadzenie przez niego i owoce wiary są najbardziej istotne, 
-jednak o samych Pismach również trzeba i warto rozmawiać - w miłości bo "poznanie nadyma, ale miłość buduje". 
+Wiara w Jezusa, a następnie życie wg Ducha, prowadzenie przez niego i owoce wiary są najbardziej istotne, o samych Pismach jednka również 
+trzeba i warto rozmawiać.. w miłości, bo "poznanie nadyma, ale miłość buduje". 
 
-To Bóg objawia poszczególnym ludziom co chce - każdemu wg miary, podobnie jak każdy członek w ciele pełni inne funkcje. 
-
-Zachęcam do zachowania miłości i jedności między ludźmi oddanymi Chrystusowi,   
+To Bóg objawia poszczególnym ludziom co chce - każdemu wg miary. Zachęcam do zachowania miłości i jedności między ludźmi oddanymi Chrystusowi,   
 o co On sam zresztą się modlił, mimo pewnych różnic w rozumieniu pomniejszych spraw. 
   
-Wszyscy korzystamy z materiałów ludzi 
-z którymi nie zgadzamy się w pełni, a są wartościowe. 
+Wszyscy korzystamy z materiałów ludzi z którymi nie zgadzamy się w pełni, a są wartościowe. 
 
-Ja nie znalazłem na świecie osoby, z którą w zgadzam się w każdym najmniejszym aspekcie biblijnym 
-i uważam to za normalne, zważywszy ilość treści jakie niesie Biblia, ograniczony czas na jej interpretowanie 
-i poziom szczegółowości dyskusji. Często mamy tendencję do rozumienia więcej ponad to co napisano i tutaj głównie rodzą się jałowe spory 
-o rzeczach, których Biblia nie precyzuje jednoznacznie, więc i my nie musimy.
+Ja nie znalazłem na świecie osoby, z którą w zgadzam się w każdym najmniejszym aspekcie biblijnym. To normalne zważywszy ilość treści 
+jakie Biblia niesie, ograniczony czas na jej interpretowanie 
+i poziom szczegółowości dyskusji. Często mamy tendencję do rozumienia więcej ponad to co napisano i stąd rodzą się jałowe spory 
+o rzeczy, których Biblia nie precyzuje jednoznacznie, więc i my nie musimy.
   
 W jakichkolwiek różnicach doktrynalnych pamiętajmy o słowach naszego Pana: 
 "Po tym wszyscy poznają, żeście uczniami moimi, jeśli miłość wzajemną mieć będziecie".
