--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@ Jeżeli czytelnik jest przekonany co do swojej wiary i poznania, a argumenty prz
   
 Jest tutaj jednak przedstawione świadectwo nie jednej, a wielu osób - doświadczeń Starszych, dokonanym w dobrej wierze i ze szczerością. 
   
-Wiara w Jezusa, a następnie życie wg Ducha, prowadzenie przez niego i owoce wiary są najbardziej istotne, o samych Pismach jednka również 
-trzeba i warto rozmawiać.. w miłości, bo "poznanie nadyma, ale miłość buduje". 
+Wiara w Jezusa, a następnie życie wg Ducha, prowadzenie przez niego i owoce wiary są najbardziej istotne, o samych Pismach jednak również 
+trzeba i warto rozmawiać... W miłości, bo "poznanie nadyma, ale miłość buduje". 
 
 To Bóg objawia poszczególnym ludziom co chce - każdemu wg miary. Zachęcam do zachowania miłości i jedności między ludźmi oddanymi Chrystusowi,   
 o co On sam zresztą się modlił, mimo pewnych różnic w rozumieniu pomniejszych spraw. 
@@ -168,7 +168,7 @@ o co On sam zresztą się modlił, mimo pewnych różnic w rozumieniu pomniejszy
 Wszyscy korzystamy z materiałów ludzi z którymi nie zgadzamy się w pełni, a są wartościowe. 
 
 Ja nie znalazłem na świecie osoby, z którą w zgadzam się w każdym najmniejszym aspekcie biblijnym. To normalne zważywszy ilość treści 
-jakie Biblia niesie, ograniczony czas na jej interpretowanie 
+jakie Biblia niesie, ograniczony czas na jej badanie 
 i poziom szczegółowości dyskusji. Często mamy tendencję do rozumienia więcej ponad to co napisano i stąd rodzą się jałowe spory 
 o rzeczy, których Biblia nie precyzuje jednoznacznie, więc i my nie musimy.
   
