--- a/index.html
+++ b/index.html
@@ -80,7 +80,15 @@
 </br>
 
 <div style="clear:left;font-size:15px;text-align: justify;">
-
+  <input id="toggle" type="checkbox">
+  <label for="toggle">Hidden</label>
+  
+<div id="expand">
+    <section>
+      <p>aaa</p>
+    </section>
+</div>
+  
 Niniejsza strona zawiera tekst Biblii oraz kopie stron z materiałami pomocnymi w jej nietrynitarnej interpretacji. 
 
 Argumenty tu przedstawione (poza ogólną nauką Pisma Świętego, proroctwami, historią, ...) 
