--- a/index.html
+++ b/index.html
@@ -81,15 +81,11 @@
 
 <div style="clear:left;font-size:15px;text-align: justify;">
   <input id="toggle" type="checkbox">
-  <label for="toggle">Hidden</label>
+  <label for="toggle">Od autora</label>
   
 <div id="expand">
     <section>
-      <p>aaa</p>
-    </section>
-</div>
-  
-Niniejsza strona zawiera tekst Biblii oraz kopie stron z materiałami pomocnymi w jej nietrynitarnej interpretacji. 
+      Niniejsza strona zawiera tekst Biblii oraz kopie stron z materiałami pomocnymi w jej nietrynitarnej interpretacji. 
 
 Argumenty tu przedstawione (poza ogólną nauką Pisma Świętego, proroctwami, historią, ...) 
 odrzucają niebiblijną koncepcję Trójcy / Trójjedynego boga (przedstawianego przez jej wyznawców jako 
@@ -223,6 +219,10 @@ Ludzie wierzący w ten sposób i posłuszni słowom Syna Bożego to zbór Jezusa
 I choć nieliczni, znajdują się obecnie we wszystkich kościołach i poza nimi. Zapraszam do lektury.
 <div>
 <p style="float:left;font-size:14px;margin-left:3px;margin-top:3px;margin-bottom:3px;">( kontakt e-mail: mojabibliagithub@gmail.com )</p>
+
+    </section>
+</div>
+  
 
 <p style="text-align:right;margin:1px;margin-right:5px>
 <!-- hitwebcounter Code START -->
